# anoncreds-api

./: Cargo.toml  README.md  config.py
app/models/: presentation.py  web_requests.py
app/plugins/: anoncreds.py
app/routers/: issuers.py  schemas.py  verifiers.py  wallets.py
demo/: README.md  config.py  main.py  requirements.txt  test_e2e.py
demo/app/plugins/: anoncreds.py
demo/app/routes/wizard/: __init__.py
demo/app/templates/pages/: index.jinja
demo/app/templates/wizard/: 03_issuer.jinja  04_issue.jinja  05_present.jinja  06_revoke.jinja  07_witness_update.jinja  e2e_demo.jinja
src/: lib.rs
