[package]
name = "anoncreds-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "anoncreds_api"
crate-type = ["cdylib"]

[dependencies]
blsful = "3.1.0"
vsss-rs = "5.3.0"
credx = { git = "https://github.com/hyperledger/anoncreds-v2-rs" }
uuid = "1.16.0"
maplit = "1"
rand = "0.8"
rand_core = "0.6"
indexmap = { version = "2", features = ["serde"] }
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.pyo3]
version = "0.24.0"
features = ["abi3-py38"]